--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -2,8 +2,13 @@
     margin: 6rem auto;
     border:1px solid black;
     max-width:1000px;
+    padding:1rem 1rem;
 }
 
 section {
+    text-align: center;
+}
+
+h1 {
     text-align: center;
 }
